Prepare v0.2.19 importer bridge
